@@ -1,3 +1,7 @@
+2015-01-06  vaiorabbit  <https://twitter.com/vaiorabbit>
+
+	* Updated using latest gl.xml.
+
 2014-11-19  vaiorabbit  <https://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
